# caretaker-ai

./: .gitignore  README.md  agents-cli-manifest.yaml  commit_msg.txt  pyproject.toml  requirements.txt
.github/workflows/: test.yml
caretaker_ai/: __init__.py  agent.py  cli.py  devops_agent.py  engine.py  patcher.py  runner.py
legacy_app/: calculator.py  test_calculator.py
tests/: test_devops_agent.py  test_engine.py  test_patcher.py  test_runner.py
