[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caretaker-ai"
version = "0.1.0"
description = "Autonomous self-healing CLI for unmaintained software pipelines."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[project.scripts]
caretaker = "caretaker_ai.cli:main"

[tool.setuptools]
packages = ["caretaker_ai"]
